fixed bug / updated fixed-icon-container position on small devices

--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -54,7 +54,7 @@
 }
 @media (max-width: 508px) {
   .fixed-icon-container {
-    left: calc(100vw - 5px) !important;
+    left: calc(100vw - 45px) !important;
   }
   .home-img{
     flex: 0 0 50% !important;
